--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"npx @tailwindcss/cli -i ./src/globals.css -o ./dist/output.css --minify"
+    "dev":"nodemon",
+    "build": "npx @tailwindcss/cli -i ./src/globals.css -o ./dist/output.css --minify"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/giridiwa44/prayer-schedules.git"
   },
-  "keywords": ["Jadwal Sholat","HTML & Tailwindcss"],
+  "keywords": [
+    "Jadwal Sholat",
+    "HTML & Tailwindcss"
+  ],
   "author": "Giri Diwa Adam",
   "license": "ISC",
   "bugs": {
@@ -20,6 +24,7 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/cli": "^4.1.13",
+    "nodemon": "^3.1.10",
     "tailwindcss": "^4.1.13"
   }
 }
