--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
     "name":"Aplikasi Jadwal Sholat",
     "short_name":"Prayer App",
-    "start_url":"/",
+    "start_url":"/index.html",
     "display": "standalone",
     "background_color": "#ffffff",
      "theme_color": "#075985",
      "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "/icons/mosque-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512.png",
+      "src": "/icons/mosque-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
